refactor: Modularize and enhance code structure for better maintainability
This refactor introduces several focused improvements: reorganized package structure, cleaner modularization, and optimized methods. Added helper methods around table column width calculations, consolidated border creation logic in the `TableFormat` class, and introduced better 256-color handling and conversion logic.

Additionally, progress bar animation transitions to use `ScheduledExecutorService` for more efficient control. These changes improve readability, maintainability, and ensure that core responsibilities are modular and streamlined across the codebase.